--- a/color_prior_test.ipynb
+++ b/color_prior_test.ipynb
@@ -60,6 +60,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -665,8 +672,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utility Functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getStructuringElement(shape, ksize):\n",
+    "    if shape == 0:  \n",
+    "        return np.ones(ksize, dtype=np.uint8)\n",
+    "\n",
+    "def erode(image, kernel):\n",
+    "    \"\"\"Erosion operation using custom structuring element.\"\"\"\n",
+    "    \"\"\"Grayscale input image and binary kernel.\"\"\"\n",
+    "    k_h, k_w = kernel.shape\n",
+    "    pad_h, pad_w = k_h // 2, k_w // 2\n",
+    "    \n",
+    "    # Pad the image to handle border effects\n",
+    "    padded_image = np.pad(image, ((pad_h, pad_h), (pad_w, pad_w)), mode='constant', constant_values=255)\n",
+    "    eroded_image = np.zeros_like(image)\n",
+    "\n",
+    "    # Perform erosion\n",
+    "    for i in range(image.shape[0]):\n",
+    "        for j in range(image.shape[1]):\n",
+    "            region = padded_image[i:i+k_h, j:j+k_w]\n",
+    "            eroded_image[i, j] = np.min(region[kernel == 1])  # Apply erosion\n",
+    "    \n",
+    "    return eroded_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dark Channel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dark_channel(img, size=15):\n",
+    "    \"\"\"Computes the dark channel of an image.\"\"\"\n",
+    "    min_channel = np.min(img, axis=2)  # Find the minimum across color channels\n",
+    "    kernel = getStructuringElement(0, (size, size))  # Custom structuring element\n",
+    "    dark = erode(min_channel, kernel)  # Custom erosion function\n",
+    "    return dark"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Atmospheric Light"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def atmospheric_light(img, dark):\n",
+    "    \"\"\"Estimates the atmospheric light by finding the brightest pixels in the dark channel.\"\"\"\n",
+    "    h, w = img.shape[:2]\n",
+    "    num_pixels = h * w // 1000  # Take top 0.1% brightest pixels\n",
+    "    dark_vec = dark.reshape(h * w)\n",
+    "    img_vec = img.reshape(h * w, 3)\n",
+    "    indices = np.argsort(dark_vec)[-num_pixels:]  # Get indices of top pixels\n",
+    "    atmo_light = np.mean(img_vec[indices], axis=0)  # Compute mean of brightest pixels\n",
+    "    return atmo_light"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transmission Estimate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transmission_estimate(img, atmo_light, omega=0.95, size=15):\n",
+    "    \"\"\"Estimates the transmission map.\"\"\"\n",
+    "    norm_img = img / atmo_light\n",
+    "    transmission = 1 - omega * dark_channel(norm_img, size)\n",
+    "    return transmission"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recover Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recover_image(img, t, atmo_light, t0=0.1):\n",
+    "    \"\"\"Recovers the haze-free image using the estimated transmission map.\"\"\"\n",
+    "    t = np.maximum(t, t0)  # Avoid division by zero\n",
+    "    J = (img - atmo_light) / t[:, :, None] + atmo_light\n",
+    "    return np.clip(J, 0, 1)\n",
+    "\n",
+    "def guided_filter(I, p, r, eps):\n",
+    "    \"\"\"Guided filter for refining the transmission map.\"\"\"\n",
+    "    mean_I = cv2.boxFilter(I, cv2.CV_64F, (r, r))\n",
+    "    mean_p = cv2.boxFilter(p, cv2.CV_64F, (r, r))\n",
+    "    corr_I = cv2.boxFilter(I * I, cv2.CV_64F, (r, r))\n",
+    "    corr_Ip = cv2.boxFilter(I * p, cv2.CV_64F, (r, r))\n",
+    "\n",
+    "    var_I = corr_I - mean_I * mean_I\n",
+    "    cov_Ip = corr_Ip - mean_I * mean_p\n",
+    "\n",
+    "    a = cov_Ip / (var_I + eps)\n",
+    "    b = mean_p - a * mean_I\n",
+    "\n",
+    "    mean_a = cv2.boxFilter(a, cv2.CV_64F, (r, r))\n",
+    "    mean_b = cv2.boxFilter(b, cv2.CV_64F, (r, r))\n",
+    "\n",
+    "    q = mean_a * I + mean_b\n",
+    "    return q\n",
+    "\n",
+    "def dehaze(img_path):\n",
+    "    \"\"\"Complete dehazing pipeline using Dark Channel Prior.\"\"\"\n",
+    "    img = cv2.imread(img_path) / 255.0  # Normalize image\n",
+    "    dark = dark_channel(img)\n",
+    "    atmo_light = atmospheric_light(img, dark)\n",
+    "    transmission = transmission_estimate(img, atmo_light)\n",
+    "    \n",
+    "    # Refining transmission map using guided filter\n",
+    "    gray_img = cv2.cvtColor((img * 255).astype(np.uint8), cv2.COLOR_BGR2GRAY) / 255.0\n",
+    "    refined_t = guided_filter(gray_img, transmission, r=60, eps=1e-3)\n",
+    "    \n",
+    "    dehazed_img = recover_image(img, refined_t, atmo_light)\n",
+    "    return (dehazed_img * 255).astype(np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -721,94 +882,6 @@
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
-    "def getStructuringElement(shape, ksize):\n",
-    "    if shape == 0:  \n",
-    "        return np.ones(ksize, dtype=np.uint8)\n",
-    "\n",
-    "def erode(image, kernel):\n",
-    "    \"\"\"Erosion operation using custom structuring element.\"\"\"\n",
-    "    \"\"\"Grayscale input image and binary kernel.\"\"\"\n",
-    "    k_h, k_w = kernel.shape\n",
-    "    pad_h, pad_w = k_h // 2, k_w // 2\n",
-    "    \n",
-    "    # Pad the image to handle border effects\n",
-    "    padded_image = np.pad(image, ((pad_h, pad_h), (pad_w, pad_w)), mode='constant', constant_values=255)\n",
-    "    eroded_image = np.zeros_like(image)\n",
-    "\n",
-    "    # Perform erosion\n",
-    "    for i in range(image.shape[0]):\n",
-    "        for j in range(image.shape[1]):\n",
-    "            region = padded_image[i:i+k_h, j:j+k_w]\n",
-    "            eroded_image[i, j] = np.min(region[kernel == 1])  # Apply erosion\n",
-    "    \n",
-    "    return eroded_image\n",
-    "\n",
-    "def dark_channel(img, size=15):\n",
-    "    \"\"\"Computes the dark channel of an image.\"\"\"\n",
-    "    min_channel = np.min(img, axis=2)  # Find the minimum across color channels\n",
-    "    kernel = getStructuringElement(0, (size, size))  # Custom structuring element\n",
-    "    dark = erode(min_channel, kernel)  # Custom erosion function\n",
-    "    return dark\n",
-    "\n",
-    "def atmospheric_light(img, dark):\n",
-    "    \"\"\"Estimates the atmospheric light by finding the brightest pixels in the dark channel.\"\"\"\n",
-    "    h, w = img.shape[:2]\n",
-    "    num_pixels = h * w // 1000  # Take top 0.1% brightest pixels\n",
-    "    dark_vec = dark.reshape(h * w)\n",
-    "    img_vec = img.reshape(h * w, 3)\n",
-    "    indices = np.argsort(dark_vec)[-num_pixels:]  # Get indices of top pixels\n",
-    "    atmo_light = np.mean(img_vec[indices], axis=0)  # Compute mean of brightest pixels\n",
-    "    return atmo_light\n",
-    "\n",
-    "def transmission_estimate(img, atmo_light, omega=0.95, size=15):\n",
-    "    \"\"\"Estimates the transmission map.\"\"\"\n",
-    "    norm_img = img / atmo_light\n",
-    "    transmission = 1 - omega * dark_channel(norm_img, size)\n",
-    "    return transmission\n",
-    "\n",
-    "def guided_filter(I, p, r, eps):\n",
-    "    \"\"\"Guided filter for refining the transmission map.\"\"\"\n",
-    "    mean_I = cv2.boxFilter(I, cv2.CV_64F, (r, r))\n",
-    "    mean_p = cv2.boxFilter(p, cv2.CV_64F, (r, r))\n",
-    "    corr_I = cv2.boxFilter(I * I, cv2.CV_64F, (r, r))\n",
-    "    corr_Ip = cv2.boxFilter(I * p, cv2.CV_64F, (r, r))\n",
-    "\n",
-    "    var_I = corr_I - mean_I * mean_I\n",
-    "    cov_Ip = corr_Ip - mean_I * mean_p\n",
-    "\n",
-    "    a = cov_Ip / (var_I + eps)\n",
-    "    b = mean_p - a * mean_I\n",
-    "\n",
-    "    mean_a = cv2.boxFilter(a, cv2.CV_64F, (r, r))\n",
-    "    mean_b = cv2.boxFilter(b, cv2.CV_64F, (r, r))\n",
-    "\n",
-    "    q = mean_a * I + mean_b\n",
-    "    return q\n",
-    "\n",
-    "def recover_image(img, t, atmo_light, t0=0.1):\n",
-    "    \"\"\"Recovers the haze-free image using the estimated transmission map.\"\"\"\n",
-    "    t = np.maximum(t, t0)  # Avoid division by zero\n",
-    "    J = (img - atmo_light) / t[:, :, None] + atmo_light\n",
-    "    return np.clip(J, 0, 1)\n",
-    "\n",
-    "def dehaze(img_path):\n",
-    "    \"\"\"Complete dehazing pipeline using Dark Channel Prior.\"\"\"\n",
-    "    img = cv2.imread(img_path) / 255.0  # Normalize image\n",
-    "    dark = dark_channel(img)\n",
-    "    atmo_light = atmospheric_light(img, dark)\n",
-    "    transmission = transmission_estimate(img, atmo_light)\n",
-    "    \n",
-    "    # Refining transmission map using guided filter\n",
-    "    gray_img = cv2.cvtColor((img * 255).astype(np.uint8), cv2.COLOR_BGR2GRAY) / 255.0\n",
-    "    refined_t = guided_filter(gray_img, transmission, r=60, eps=1e-3)\n",
-    "    \n",
-    "    dehazed_img = recover_image(img, refined_t, atmo_light)\n",
-    "    return (dehazed_img * 255).astype(np.uint8)\n",
-    "\n",
-    "# Example usage:\n",
     "image_paths = [\"dataset/base/train/St_Wf_D_L__033.JPG\"\n",
     "    , \"dataset/base/train/St_Wf_D_L__029.JPG\"\n",
     "    , \"dataset/base/train/St_Wf_D_L__009.JPG\"\n",
@@ -830,6 +903,13 @@
     "    plt.axis('off')\n",
     "\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Process and Store Images"
    ]
   },
   {
