dataset creation but with height 71...x127...

--- a/dehaze-kernel.ipynb
+++ b/dehaze-kernel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:01:01.883179Z",
@@ -34,7 +34,7 @@
     "import torchvision.utils as utils\n",
     "import torch.utils.data as data\n",
     "from torch.utils.data import DataLoader\n",
-    "import glob\n",
+    "from glob import glob\n",
     "from torchvision.transforms import ToTensor, Normalize, Compose, ToPILImage\n",
     "from torchvision.models import vgg16\n",
     "from torch.utils.data import Dataset\n",
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:01:17.269654Z",
@@ -1469,7 +1469,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import glob\n",
     "import torch\n",
     "from torch.utils.data import Dataset\n",
     "from torchvision.transforms import Compose, ToTensor, Normalize\n",
@@ -1556,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:01:17.291708Z",
@@ -1578,7 +1577,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import glob\n",
     "import torch\n",
     "from torch.utils.data import Dataset\n",
     "from torchvision.transforms import Compose, ToTensor, Normalize\n",
@@ -2355,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:01:22.999035Z",
@@ -2377,7 +2375,6 @@
    "outputs": [],
    "source": [
     "# import os\n",
-    "# import glob\n",
     "# import shutil\n",
     "\n",
     "# hazeeffected_images_dir_train = f\"{train_data_dir}/IN\"\n",
@@ -2922,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:09:11.972197Z",
@@ -2944,8 +2941,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import glob\n",
     "import torch\n",
+    "import glob\n",
     "from torch.utils.data import Dataset\n",
     "from torchvision.transforms import ToTensor\n",
     "from PIL import Image, UnidentifiedImageError\n",
@@ -3353,29 +3350,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected str, bytes or os.PathLike object, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-58-9a64522568cd>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0msr_hr_dir\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/kaggle/working/filtered_LR/X4'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0msr_lr_dir\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/kaggle/working/filtered_HR'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0msr_train_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSRDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlr_dir\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msr_lr_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhr_dir\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msr_hr_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscale\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'x4'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0msr_val_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSRDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlr_dir\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msr_lr_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhr_dir\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msr_hr_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscale\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'x4'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'val'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0msr_train_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msr_train_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcollate_fn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcustom_collate_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-46-9b54de23e62c>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, lr_dir, hr_dir, scale, split, split_ratio)\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0mvalid_ext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\".jpg\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\".jpeg\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\".png\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\".bmp\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\".tiff\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         lr_images = sorted([\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0mf\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlr_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"*.*\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalid_ext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         ])\n",
-      "\u001b[0;32m/usr/lib/python3.10/posixpath.py\u001b[0m in \u001b[0;36mjoin\u001b[0;34m(a, *p)\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0mwill\u001b[0m \u001b[0mbe\u001b[0m \u001b[0mdiscarded\u001b[0m\u001b[0;34m.\u001b[0m  \u001b[0mAn\u001b[0m \u001b[0mempty\u001b[0m \u001b[0mlast\u001b[0m \u001b[0mpart\u001b[0m \u001b[0mwill\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m \u001b[0mpath\u001b[0m \u001b[0mthat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m     ends with a separator.\"\"\"\n\u001b[0;32m---> 76\u001b[0;31m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m     \u001b[0msep\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_get_sep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m     \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected str, bytes or os.PathLike object, not tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample LR: ['000001x4.png', '000002x4.png', '000003x4.png', '000004x4.png', '000005x4.png']\n",
+      "Sample HR: ['000001.png', '000002.png', '000003.png', '000004.png', '000005.png']\n"
      ]
     }
    ],
    "source": [
+    "from glob import glob\n",
+    "import os\n",
+    "\n",
+    "lr_images = sorted([os.path.basename(f) for f in glob('/kaggle/working/filtered_LR/X4/*')])\n",
+    "hr_images = sorted([os.path.basename(f) for f in glob('/kaggle/working/filtered_HR/*')])\n",
+    "\n",
+    "print(\"Sample LR:\", lr_images[:5])\n",
+    "print(\"Sample HR:\", hr_images[:5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# --- SR Dataset Setup --- #\n",
     "sr_enabled = True\n",
     "if sr_enabled:\n",
-    "    sr_hr_dir='/kaggle/working/filtered_LR/X4',\n",
-    "    sr_lr_dir='/kaggle/working/filtered_HR',\n",
+    "    sr_lr_dir='/kaggle/working/filtered_LR/X4'\n",
+    "    sr_hr_dir='/kaggle/working/filtered_HR'\n",
     "    sr_train_dataset = SRDataset(lr_dir=sr_lr_dir, hr_dir=sr_hr_dir, scale='x4', split='train')\n",
     "    sr_val_dataset = SRDataset(lr_dir=sr_lr_dir, hr_dir=sr_hr_dir, scale='x4', split='val')\n",
     "    sr_train_loader = DataLoader(sr_train_dataset, batch_size=batch_size, shuffle=True, collate_fn=custom_collate_fn)\n",
@@ -3385,106 +3393,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-21T16:16:20.609852Z",
-     "iopub.status.busy": "2025-04-21T16:16:20.609539Z",
-     "iopub.status.idle": "2025-04-21T16:27:01.537597Z",
-     "shell.execute_reply": "2025-04-21T16:27:01.536166Z",
-     "shell.execute_reply.started": "2025-04-21T16:16:20.609829Z"
-    },
-    "trusted": true
-   },
+   "execution_count": 72,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Checking 128x128 crop eligibility: 100%|██████████| 1193/1193 [10:40<00:00,  1.86it/s]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "✅ Can crop 128x128: 1181 batches\n",
-      "❌ Cannot crop 128x128: 12 batches\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Batch 0: LR shape: torch.Size([2, 3, 71, 127]), HR shape: torch.Size([2, 3, 71, 127])\n",
+      "Batch 1: LR shape: torch.Size([2, 3, 95, 118]), HR shape: torch.Size([2, 3, 95, 118])\n",
+      "Batch 2: LR shape: torch.Size([2, 3, 80, 127]), HR shape: torch.Size([2, 3, 80, 127])\n",
+      "Batch 3: LR shape: torch.Size([2, 3, 84, 117]), HR shape: torch.Size([2, 3, 84, 117])\n",
+      "Batch 4: LR shape: torch.Size([2, 3, 78, 126]), HR shape: torch.Size([2, 3, 78, 126])\n"
      ]
     }
    ],
    "source": [
-    "# from tqdm import tqdm\n",
-    "\n",
-    "# can_crop = 0\n",
-    "# cannot_crop = 0\n",
-    "\n",
-    "# for lr, hr in tqdm(sr_train_loader, desc=\"Checking 128x128 crop eligibility\"):\n",
-    "#     _, _, h, w = lr.shape\n",
-    "#     if h >= 128 and w >= 128:\n",
-    "#         can_crop += 1\n",
-    "#     else:\n",
-    "#         cannot_crop += 1\n",
-    "\n",
-    "# print(f\"\\n✅ Can crop 128x128: {can_crop} batches\")\n",
-    "# print(f\"❌ Cannot crop 128x128: {cannot_crop} batches\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "trusted": true
-   },
-   "outputs": [],
-   "source": [
-    "from tqdm import tqdm\n",
-    "\n",
-    "can_crop = 0\n",
-    "cannot_crop = 0\n",
-    "\n",
-    "for lr, hr in tqdm(sr_val_loader, desc=\"Checking 128x128 crop eligibility\"):\n",
-    "    _, _, h, w = lr.shape\n",
-    "    if h >= 128 and w >= 128:\n",
-    "        can_crop += 1\n",
-    "    else:\n",
-    "        cannot_crop += 1\n",
-    "\n",
-    "print(f\"\\n✅ Can crop 128x128: {can_crop} batches\")\n",
-    "print(f\"❌ Cannot crop 128x128: {cannot_crop} batches\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.status.busy": "2025-04-21T16:01:55.202410Z",
-     "iopub.status.idle": "2025-04-21T16:01:55.202724Z",
-     "shell.execute_reply": "2025-04-21T16:01:55.202584Z",
-     "shell.execute_reply.started": "2025-04-21T16:01:55.202570Z"
-    },
-    "papermill": {
-     "duration": 0.018508,
-     "end_time": "2025-04-12T13:10:14.612764",
-     "exception": false,
-     "start_time": "2025-04-12T13:10:14.594256",
-     "status": "completed"
-    },
-    "tags": [],
-    "trusted": true
-   },
-   "outputs": [],
-   "source": [
-    ".."
+    "# enumerate\n",
+    "for i, (lr, hr) in enumerate(sr_train_loader):\n",
+    "    print(f\"Batch {i}: LR shape: {lr.shape}, HR shape: {hr.shape}\")\n",
+    "    if i == 4:  # Just to limit the output\n",
+    "        break\n"
    ]
   },
   {
