val dir not available but compleeted. commented line only

--- a/dehaze-kernel.ipynb
+++ b/dehaze-kernel.ipynb
@@ -2933,14 +2933,14 @@
     "    crop_size=crop_size\n",
     ")\n",
     "\n",
-    "# Validation\n",
-    "center_crop_and_save(\n",
-    "    hazy_dir=f\"{val_data_dir}/hazy\",\n",
-    "    gt_dir=f\"{val_data_dir}/GT\",\n",
-    "    out_hazy_dir=\"/kaggle/working/cropped_val/hazy\",\n",
-    "    out_gt_dir=\"/kaggle/working/cropped_val/GT\",\n",
-    "    crop_size=crop_size\n",
-    ")\n"
+    "# # Validation\n",
+    "# center_crop_and_save(\n",
+    "#     hazy_dir=f\"{val_data_dir}/hazy\",\n",
+    "#     gt_dir=f\"{val_data_dir}/GT\",\n",
+    "#     out_hazy_dir=\"/kaggle/working/cropped_val/hazy\",\n",
+    "#     out_gt_dir=\"/kaggle/working/cropped_val/GT\",\n",
+    "#     crop_size=crop_size\n",
+    "# )\n"
    ]
   },
   {
