--- a/dehaze-kernel copy.ipynb
+++ b/dehaze-kernel copy.ipynb
@@ -2955,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:09:24.350816Z",
@@ -2982,9 +2982,10 @@
     "\n",
     "    sr_train_dataset = SRDataset(lr_dir=sr_lr_dir, hr_dir=sr_hr_dir, scale='x4', split='train')\n",
     "    sr_val_dataset = SRDataset(lr_dir=sr_lr_dir, hr_dir=sr_hr_dir, scale='x4', split='val')\n",
-    "    sr_train_loader = DataLoader(sr_train_dataset, batch_size=batch_size, shuffle=True, collate_fn=custom_collate_fn )\n",
-    "    sr_val_loader = DataLoader(sr_val_dataset, batch_size=batch_size, shuffle=False, collate_fn=custom_collate_fn)\n",
-    "    sr_iter = iter(sr_train_loader)\n"
+    "    # MODIFIED: Added drop_last=True\n",
+    "    sr_train_loader = DataLoader(sr_train_dataset, batch_size=train_batch_size, shuffle=True, collate_fn=custom_collate_fn, drop_last=True)\n",
+    "    sr_val_loader = DataLoader(sr_val_dataset, batch_size=val_batch_size, shuffle=False, collate_fn=custom_collate_fn) # Consider adding drop_last=True here too for consistency if needed\n",
+    "    sr_iter = iter(sr_train_loader)"
    ]
   },
   {
@@ -3153,7 +3154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3172,7 +3173,7 @@
     "# teacher_net.eval()\n",
     "\n",
     "# --- Feature Affinity Module --- #\n",
-    "fam = FeatureAffinityModule(channels=64).to(device)\n",
+    "fam = FeatureAffinityModule(channels=16).to(device)\n",
     "ssfm_loss = SSFM(loss_type='l1') \n",
     "\n",
     "\n",
