kaggle file location

--- a/dehaze-kernel copy.ipynb
+++ b/dehaze-kernel copy.ipynb
@@ -2060,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2090,7 +2090,8 @@
     "elif category == 'reside':\n",
     "    print('Using RESIDE dataset')\n",
     "    num_epochs = 25\n",
-    "    train_data_dir = '/kaggle/input/reside6k/RESIDE-6K/train'\n",
+    "    # train_data_dir = '/kaggle/input/reside6k/RESIDE-6K/train'\n",
+    "    train_data_dir = '/kaggle/input/reside-processed/kaggle/working/cropped_train'\n",
     "    val_data_dir = '/kaggle/input/reside6k/RESIDE-6K/train'\n",
     "    test_data_dir = '/kaggle/input/reside6k/RESIDE-6K/test'\n",
     "    if execution_env == 'local':\n",
@@ -2192,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,8 +2201,10 @@
     "    # sr_hr_dir = '/kaggle/input/flickr2k/Flickr2K/Flickr2K_HR'\n",
     "    # sr_lr_dir = '/kaggle/input/flickr2k/Flickr2K/Flickr2K_LR_bicubic/X4'\n",
     "if sr_enabled:\n",
-    "    sr_hr_dir = '/kaggle/input/flickr2k/Flickr2K/Flickr2K_HR'\n",
-    "    sr_lr_dir = '/kaggle/input/flickr2k/Flickr2K/Flickr2K_LR_bicubic/X4'\n",
+    "    sr_hr_dir = '/kaggle/input/sr-flickr/kaggle/working/filtered_HR'\n",
+    "    sr_lr_dir = '/kaggle/input/sr-flickr/kaggle/working/filtered_LR/X4'\n",
+    "    # sr_hr_dir = '/kaggle/input/flickr2k/Flickr2K/Flickr2K_HR'\n",
+    "    # sr_lr_dir = '/kaggle/input/flickr2k/Flickr2K/Flickr2K_LR_bicubic/X4'\n",
     "    if execution_env == 'local':\n",
     "        sr_hr_dir = '/Volumes/S/dev/project/code/Aphase/dehaze/dataset/SR_flickr/kaggle/working/filtered_HR'\n",
     "        sr_lr_dir = '/Volumes/S/dev/project/code/Aphase/dehaze/dataset/SR_flickr/kaggle/working/filtered_LR/X4'"
