Modified tail for x2 upscaling in model

--- a/dehaze-kernel copy.ipynb
+++ b/dehaze-kernel copy.ipynb
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:01:17.219705Z",
@@ -1523,15 +1523,11 @@
    },
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
     "class DeepGuidedNetwork(nn.Module):\n",
     "    def __init__(self, in_channels=3, radius=1):\n",
     "        super().__init__()\n",
     "        self.in_channels = in_channels\n",
-    "        norm = AdaptiveInstanceNormalization  # define this separately\n",
+    "        norm = AdaptiveInstanceNormalization  # define this separately if used\n",
     "        kernel_size = 3\n",
     "        depth_rate = 64\n",
     "        growth_rate = 16\n",
@@ -1545,14 +1541,15 @@
     "        self.rdb3 = HybridResidualDenseBlock(depth_rate, growth_rate, num_dense_layer)\n",
     "        self.rdb4 = HybridResidualDenseBlock(depth_rate, growth_rate, num_dense_layer)\n",
     "\n",
+    "        # Modified tail for x2 upscaling\n",
     "        self.tail = nn.Sequential(\n",
-    "            nn.Conv2d(depth_rate, 256, 3, padding=1),       # 64 → 256\n",
+    "            nn.Conv2d(depth_rate, 64, 3, padding=1),            # 64 → 64\n",
     "            nn.ReLU(inplace=True),\n",
-    "            nn.Conv2d(256, in_channels * 16, 3, padding=1), # 256 → 48 for 3 × 4²\n",
-    "            nn.PixelShuffle(4)                              # 48 → 3, upsample ×4\n",
+    "            nn.Conv2d(64, in_channels * 4, 3, padding=1),       # 64 → 3 * 2^2 = 12\n",
+    "            nn.PixelShuffle(2)                                  # 12 → 3, upsample ×2\n",
     "        )\n",
     "\n",
-    "    def forward(self, x, sr= False):\n",
+    "    def forward(self, x, sr=False):\n",
     "        x_in = self.conv_in(x)\n",
     "        feat1 = self.rdb1(x_in)\n",
     "        feat2 = self.rdb2(feat1)\n",
@@ -1560,8 +1557,8 @@
     "        feat4 = self.rdb4(feat3)\n",
     "        out_feat = self.conv_out(feat4)\n",
     "\n",
-    "        sr = self.tail(out_feat)  # shape: (B, 3, H×4, W×4)\n",
-    "        return sr, sr, [feat1, feat2, feat3, feat4]"
+    "        sr = self.tail(out_feat)  # shape: (B, 3, H×2, W×2)\n",
+    "        return sr, sr, [feat1, feat2, feat3, feat4]\n"
    ]
   },
   {
