--- a/dehaze-kernel copy.ipynb
+++ b/dehaze-kernel copy.ipynb
@@ -1543,11 +1543,12 @@
     "\n",
     "        # Modified tail for x2 upscaling\n",
     "        self.tail = nn.Sequential(\n",
-    "            nn.Conv2d(depth_rate, 64, 3, padding=1),            # 64 → 64\n",
+    "            nn.Conv2d(depth_rate, 256, 3, padding=1),  # 64 → 256\n",
     "            nn.ReLU(inplace=True),\n",
-    "            nn.Conv2d(64, in_channels * 4, 3, padding=1),       # 64 → 3 * 2^2 = 12\n",
-    "            nn.PixelShuffle(2)                                  # 12 → 3, upsample ×2\n",
+    "            nn.Conv2d(256, in_channels * 4, 3, padding=1),  # 256 → 12 (for 2× upscaling)\n",
+    "            nn.PixelShuffle(2)\n",
     "        )\n",
+    "\n",
     "\n",
     "    def forward(self, x, sr=False):\n",
     "        x_in = self.conv_in(x)\n",
@@ -2376,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2389,8 +2390,10 @@
     "    # sr_hr_dir = '/kaggle/input/flickr2k/Flickr2K/Flickr2K_HR'\n",
     "    # sr_lr_dir = '/kaggle/input/flickr2k/Flickr2K/Flickr2K_LR_bicubic/X4'\n",
     "    if execution_env == 'local':\n",
-    "        sr_hr_dir = './dataset/SR_flickr/kaggle/working/filtered_HR'\n",
-    "        sr_lr_dir = './dataset/SR_flickr/kaggle/working/filtered_LR/X4'\n",
+    "        sr_hr_dir = './dataset/Flickr2K/Flickr2K_HR'\n",
+    "        sr_lr_dir = './dataset/Flickr2K/Flickr2K_LR_unknown/X4'\n",
+    "        # sr_hr_dir = './dataset/SR_flickr/kaggle/working/filtered_HR'\n",
+    "        # sr_lr_dir = './dataset/SR_flickr/kaggle/working/filtered_LR/X4'\n",
     "        # sr_hr_dir = '/Volumes/S/dev/project/code/Aphase/dehaze/dataset/SR_flickr/kaggle/working/filtered_HR'\n",
     "        # sr_lr_dir = '/Volumes/S/dev/project/code/Aphase/dehaze/dataset/SR_flickr/kaggle/working/filtered_LR/X4'"
    ]
