comment resize code

--- a/dehaze-kernel copy.ipynb
+++ b/dehaze-kernel copy.ipynb
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2425,42 +2425,42 @@
     }
    ],
    "source": [
-    "from PIL import Image\n",
-    "import os\n",
-    "from tqdm import tqdm\n",
+    "# from PIL import Image\n",
+    "# import os\n",
+    "# from tqdm import tqdm\n",
     "\n",
-    "# Define paths\n",
-    "input_dir = 'dataset/SR_flickr/kaggle/working/filtered_HR'\n",
-    "output_dir = 'dataset/SR_flickr/kaggle/working/filtered_LR_2'\n",
+    "# # Define paths\n",
+    "# input_dir = 'dataset/SR_flickr/kaggle/working/filtered_HR'\n",
+    "# output_dir = 'dataset/SR_flickr/kaggle/working/filtered_LR_2'\n",
     "\n",
-    "# Create output directory if it doesn't exist\n",
-    "os.makedirs(output_dir, exist_ok=True)\n",
+    "# # Create output directory if it doesn't exist\n",
+    "# os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# Function to resize images to half their resolution\n",
-    "def resize_image(input_path, output_path, target_size=(128, 128)):\n",
-    "    img = Image.open(input_path)\n",
-    "    img_resized = img.resize(target_size, Image.LANCZOS)\n",
-    "    img_resized.save(output_path)\n",
+    "# # Function to resize images to half their resolution\n",
+    "# def resize_image(input_path, output_path, target_size=(128, 128)):\n",
+    "#     img = Image.open(input_path)\n",
+    "#     img_resized = img.resize(target_size, Image.LANCZOS)\n",
+    "#     img_resized.save(output_path)\n",
     "\n",
-    "# Get list of images in input directory\n",
-    "try:\n",
-    "    images = [f for f in os.listdir(input_dir) if f.endswith(('.png', '.jpg', '.jpeg'))]\n",
-    "except FileNotFoundError as e:\n",
-    "    images = []\n",
-    "    error_message = str(e)\n",
+    "# # Get list of images in input directory\n",
+    "# try:\n",
+    "#     images = [f for f in os.listdir(input_dir) if f.endswith(('.png', '.jpg', '.jpeg'))]\n",
+    "# except FileNotFoundError as e:\n",
+    "#     images = []\n",
+    "#     error_message = str(e)\n",
     "\n",
-    "# Resize each image and save to output directory using tqdm\n",
-    "if images:\n",
-    "    for image_name in tqdm(images, desc=\"Resizing images\"):\n",
-    "        input_path = os.path.join(input_dir, image_name)\n",
-    "        output_path = os.path.join(output_dir, image_name)\n",
-    "        resize_image(input_path, output_path, target_size=(128, 128))\n",
-    "    result = \"Resizing completed\"\n",
-    "else:\n",
-    "    result = f\"Error: {error_message}\"\n",
+    "# # Resize each image and save to output directory using tqdm\n",
+    "# if images:\n",
+    "#     for image_name in tqdm(images, desc=\"Resizing images\"):\n",
+    "#         input_path = os.path.join(input_dir, image_name)\n",
+    "#         output_path = os.path.join(output_dir, image_name)\n",
+    "#         resize_image(input_path, output_path, target_size=(128, 128))\n",
+    "#     result = \"Resizing completed\"\n",
+    "# else:\n",
+    "#     result = f\"Error: {error_message}\"\n",
     "\n",
-    "result = \"Resizing completed\" if images else f\"Error: {error_message}\"\n",
-    "print(result)"
+    "# result = \"Resizing completed\" if images else f\"Error: {error_message}\"\n",
+    "# print(result)"
    ]
   },
   {
