removed debug lines from model and hybrid module

--- a/dehaze-kernel copy.ipynb
+++ b/dehaze-kernel copy.ipynb
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:01:17.176736Z",
@@ -1432,8 +1432,8 @@
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
-    "        print(\"self.layers\", self.layers)\n",
-    "        print(\"HybridResidualDenseBlock: x.shape\", x.shape)\n",
+    "        # print(\"self.layers\", self.layers)\n",
+    "        # print(\"HybridResidualDenseBlock: x.shape\", x.shape)\n",
     "        # x: (B, C, H, W)\n",
     "        features = [x]\n",
     "        # x: (B, C, H, W) -> (B, C, H, W) + (B, growth_rate, H, W) * num_dense_layers\n",
@@ -1441,27 +1441,27 @@
     "        for conv in self.layers:\n",
     "            # Apply convolution and ReLU activation\n",
     "            out = F.relu(conv(torch.cat(features, dim=1)))\n",
-    "            print(\"self.layers -> out.shape: \", out.shape)\n",
+    "            # print(\"self.layers -> out.shape: \", out.shape)\n",
     "            features.append(out)\n",
     "        \n",
-    "        print(\"self.layers -> features: \", features)\n",
+    "        # print(\"self.layers -> features: \", features)\n",
     "\n",
     "        dense_out = torch.cat(features, dim=1)\n",
-    "        print(\"self.layers -> dense_out.shape: \", dense_out.shape)\n",
+    "        # print(\"self.layers -> dense_out.shape: \", dense_out.shape)\n",
     "        fused = self.fusion(dense_out)\n",
-    "        print(\"self.layers -> fused.shape: \", fused.shape)\n",
+    "        # print(\"self.layers -> fused.shape: \", fused.shape)\n",
     "        # Apply channel attention and pixel attention\n",
     "        # fused: (B, C, H, W) -> (B, C, H, W) + (B, C, H, W) * 2\n",
     "        ca = self.channel_attention(fused)\n",
-    "        print(\"self.layers -> ca.shape: \", ca.shape)\n",
+    "        # print(\"self.layers -> ca.shape: \", ca.shape)\n",
     "        pa = self.pixel_attention(ca)\n",
-    "        print(\"self.layers -> pa.shape: \", pa.shape)\n",
+    "        # print(\"self.layers -> pa.shape: \", pa.shape)\n",
     "        # Gated residual fusion\n",
     "        # x: (B, C, H, W) + (B, C, H, W) * 2\n",
     "        gate_input = torch.cat([x, pa], dim=1)\n",
-    "        print(\"self.layers -> gate_input.shape: \", gate_input.shape)\n",
+    "        # print(\"self.layers -> gate_input.shape: \", gate_input.shape)\n",
     "        gated_fusion = self.gate(gate_input)\n",
-    "        print(\"self.layers -> gated_fusion.shape: \", gated_fusion.shape)\n",
+    "        # print(\"self.layers -> gated_fusion.shape: \", gated_fusion.shape)\n",
     "        # Apply gated fusion\n",
     "        return x * (1 - gated_fusion) + pa * gated_fusion"
    ]
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:01:17.219705Z",
@@ -1568,17 +1568,17 @@
     "        )\n",
     "\n",
     "    def forward(self, x, sr= False):\n",
-    "        print(f\"Shape of x: {x.shape}\")\n",
+    "        # print(f\"Shape of x: {x.shape}\")\n",
     "        x_in = self.conv_in(x)\n",
-    "        print(f\"Shape of x_in: {x_in.shape}\")\n",
+    "        # print(f\"Shape of x_in: {x_in.shape}\")\n",
     "        feat1 = self.rdb1(x_in)\n",
-    "        print(f\"Shape of feat1: {feat1.shape}\")\n",
+    "        # print(f\"Shape of feat1: {feat1.shape}\")\n",
     "        feat2 = self.rdb2(feat1)\n",
-    "        print(f\"Shape of feat2: {feat2.shape}\")\n",
+    "        # print(f\"Shape of feat2: {feat2.shape}\")\n",
     "        feat3 = self.rdb3(feat2)\n",
-    "        print(f\"Shape of feat3: {feat3.shape}\")\n",
+    "        # print(f\"Shape of feat3: {feat3.shape}\")\n",
     "        feat4 = self.rdb4(feat3)\n",
-    "        print(f\"Shape of feat4: {feat4.shape}\")\n",
+    "        # print(f\"Shape of feat4: {feat4.shape}\")\n",
     "        out_feat = self.conv_out(feat4)\n",
     "\n",
     "        sr = self.tail(out_feat)  # shape: (B, 3, H×4, W×4)\n",
@@ -2968,7 +2968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4249,18 +4249,18 @@
     }
    ],
    "source": [
-    "# Create a random input tensor\n",
-    "input_tensor = torch.randn(1, 3, 64, 64)  # Batch size of 1, 3 channels, 256x256 image\n",
+    "# # Create a random input tensor\n",
+    "# input_tensor = torch.randn(1, 3, 64, 64)  # Batch size of 1, 3 channels, 256x256 image\n",
     "\n",
-    "# Initialize the DeepGuidedNetwork\n",
-    "model = DeepGuidedNetwork(radius=1)\n",
+    "# # Initialize the DeepGuidedNetwork\n",
+    "# model = DeepGuidedNetwork(radius=1)\n",
     "\n",
-    "# Forward pass through the network\n",
-    "output_tensor, dummy_out, features = model(input_tensor)\n",
+    "# # Forward pass through the network\n",
+    "# output_tensor, dummy_out, features = model(input_tensor)\n",
     "\n",
-    "# Print the output shape\n",
-    "print(\"Output shape:\", output_tensor.shape)\n",
-    "print(\"Feature shapes:\", [f.shape for f in features])"
+    "# # Print the output shape\n",
+    "# print(\"Output shape:\", output_tensor.shape)\n",
+    "# print(\"Feature shapes:\", [f.shape for f in features])"
    ]
   },
   {
