--- a/dehaze-kernel copy.ipynb
+++ b/dehaze-kernel copy.ipynb
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 101,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:01:17.317546Z",
@@ -1744,7 +1744,7 @@
     "    Returns:\n",
     "        List[float]: PSNR values for each image in the batch.\n",
     "    \"\"\"\n",
-    "    # print(\"Shapes: \", dehaze.shape, gt.shape)\n",
+    "    print(\"Shapes: \", dehaze.shape, gt.shape)\n",
     "    mse = F.mse_loss(dehaze, gt, reduction='none').mean(dim=[1, 2, 3])  # Compute MSE per image\n",
     "    intensity_max = 1.0\n",
     "\n",
@@ -3423,22 +3423,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2120, 265)"
+       "(2120, 265, 265)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(sr_train_dataset), len(sr_val_dataset)"
+    "len(sr_train_dataset), len(sr_val_dataset), len(sr_test_dataset)"
    ]
   },
   {
@@ -3475,14 +3475,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shapes:  torch.Size([2, 12, 256, 256]) torch.Size([2, 3, 256, 256])\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\abd\\AppData\\Local\\Temp\\ipykernel_37084\\3946053768.py:13: UserWarning: Using a target size (torch.Size([2, 3, 256, 256])) that is different to the input size (torch.Size([2, 12, 256, 256])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "C:\\Users\\abd\\AppData\\Local\\Temp\\ipykernel_37084\\1921696975.py:13: UserWarning: Using a target size (torch.Size([2, 3, 256, 256])) that is different to the input size (torch.Size([2, 12, 256, 256])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  mse = F.mse_loss(dehaze, gt, reduction='none').mean(dim=[1, 2, 3])  # Compute MSE per image\n"
      ]
     },
@@ -3493,9 +3500,9 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[100]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# --- Initial Validation --- #\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# old_val_psnr, old_val_ssim = validationB(net, val_data_loader, device, category)\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# print(f\"[Dehazing Init Val] PSNR: {old_val_psnr:.2f}, SSIM: {old_val_ssim:.4f}\")\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m sr_enabled:\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m     sr_val_psnr, sr_val_ssim = \u001b[43mvalidation_sr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msr_val_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SR Init Val] PSNR: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_val_psnr\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, SSIM: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_val_ssim\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# --- Training Loop --- #\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m# best_psnr = old_val_psnr\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[102]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# --- Initial Validation --- #\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# old_val_psnr, old_val_ssim = validationB(net, val_data_loader, device, category)\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# print(f\"[Dehazing Init Val] PSNR: {old_val_psnr:.2f}, SSIM: {old_val_ssim:.4f}\")\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m sr_enabled:\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m     sr_val_psnr, sr_val_ssim = \u001b[43mvalidation_sr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msr_val_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SR Init Val] PSNR: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_val_psnr\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, SSIM: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_val_ssim\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# --- Training Loop --- #\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m# best_psnr = old_val_psnr\u001b[39;00m\n",
       "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mvalidation_sr\u001b[39m\u001b[34m(net, sr_val_loader, device)\u001b[39m\n\u001b[32m      7\u001b[39m         sr_out, _, _ = net(lr, sr = \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      8\u001b[39m     \u001b[38;5;66;03m# print(\"Shapes 1: \", sr_out.shape, hr.shape)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     psnr_list.extend(\u001b[43mto_psnr\u001b[49m\u001b[43m(\u001b[49m\u001b[43msr_out\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhr\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     10\u001b[39m     ssim_list.extend(to_ssim(sr_out, hr))\n\u001b[32m     12\u001b[39m avr_psnr = \u001b[38;5;28msum\u001b[39m(psnr_list) / \u001b[38;5;28mlen\u001b[39m(psnr_list) \u001b[38;5;28;01mif\u001b[39;00m psnr_list \u001b[38;5;28;01melse\u001b[39;00m \u001b[32m0.0\u001b[39m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 13\u001b[39m, in \u001b[36mto_psnr\u001b[39m\u001b[34m(dehaze, gt)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03mCompute PSNR (Peak Signal-to-Noise Ratio) between dehazed and ground truth images.\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m \u001b[33;03m    List[float]: PSNR values for each image in the batch.\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# print(\"Shapes: \", dehaze.shape, gt.shape)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m mse = \u001b[43mF\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmse_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdehaze\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mnone\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m.mean(dim=[\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m])  \u001b[38;5;66;03m# Compute MSE per image\u001b[39;00m\n\u001b[32m     14\u001b[39m intensity_max = \u001b[32m1.0\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Compute PSNR safely, avoiding division by zero and extreme values\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[101]\u001b[39m\u001b[32m, line 13\u001b[39m, in \u001b[36mto_psnr\u001b[39m\u001b[34m(dehaze, gt)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03mCompute PSNR (Peak Signal-to-Noise Ratio) between dehazed and ground truth images.\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m \u001b[33;03m    List[float]: PSNR values for each image in the batch.\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mShapes: \u001b[39m\u001b[33m\"\u001b[39m, dehaze.shape, gt.shape)\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m mse = \u001b[43mF\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmse_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdehaze\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mnone\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m.mean(dim=[\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m])  \u001b[38;5;66;03m# Compute MSE per image\u001b[39;00m\n\u001b[32m     14\u001b[39m intensity_max = \u001b[32m1.0\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Compute PSNR safely, avoiding division by zero and extreme values\u001b[39;00m\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\abd\\d\\ai\\dehaze\\.venv\\Lib\\site-packages\\torch\\nn\\functional.py:3791\u001b[39m, in \u001b[36mmse_loss\u001b[39m\u001b[34m(input, target, size_average, reduce, reduction)\u001b[39m\n\u001b[32m   3788\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   3789\u001b[39m     reduction = _Reduction.legacy_get_string(size_average, reduce)\n\u001b[32m-> \u001b[39m\u001b[32m3791\u001b[39m expanded_input, expanded_target = \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbroadcast_tensors\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3792\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m torch._C._nn.mse_loss(\n\u001b[32m   3793\u001b[39m     expanded_input, expanded_target, _Reduction.get_enum(reduction)\n\u001b[32m   3794\u001b[39m )\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\abd\\d\\ai\\dehaze\\.venv\\Lib\\site-packages\\torch\\functional.py:76\u001b[39m, in \u001b[36mbroadcast_tensors\u001b[39m\u001b[34m(*tensors)\u001b[39m\n\u001b[32m     74\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function(tensors):\n\u001b[32m     75\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(broadcast_tensors, tensors, *tensors)\n\u001b[32m---> \u001b[39m\u001b[32m76\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_VF\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbroadcast_tensors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[31mRuntimeError\u001b[39m: The size of tensor a (12) must match the size of tensor b (3) at non-singleton dimension 1"
